fix coffee price bar chart text overlap

--- a/src/visuals/2024-04-18-coffee/CoffeePricesBarChart.css
+++ b/src/visuals/2024-04-18-coffee/CoffeePricesBarChart.css
@@ -8,6 +8,11 @@
     height: 100vh;
 } */
 
+.coffee-bar-chart-container {
+    /* max-height: 80vh; */
+    /* overflow-y: scroll; */
+}
+
 .pLevels {
     font-family: Arial, Helvetica, sans-serif;
 }
